fixed image display on tablet resolutions

--- a/style.css
+++ b/style.css
@@ -286,6 +286,7 @@ body {
 
     .header2 {
         max-height: 500px;
+        padding: 0 2em;
     }
 
     .header2_left {
@@ -296,17 +297,17 @@ body {
     .header2_lines {
         position: absolute;
         left: 70%;
-        top: 10%;
+        top: 2%;
     }
     
     .header2_dots {
         position: absolute;
         left: 70%;
-        top: 85%;
+        top: 93%;
     }
 
     .header2_image {
-        max-width: 350px;
+        max-width: 450px;
         height: auto;
     }
 
@@ -360,6 +361,7 @@ body {
         max-height: 100%;
         display: flex;
         flex-direction: column;
+        padding: 0;
     }
 
     .header2_left {
